# OpenCL-N-Body-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure
.github/workflows/: main.yml
benchmarks/: .gitignore  README.md  run.sh  run_clang.bat  run_msvc.bat
doxygen_files/: Doxyfile
include/: callbacks.hpp  constants.hpp
include/Data/: AbstractData.hpp  Float3.hpp  WikipediaDataSet.hpp
include/PerformanceMetrics/: PerformanceMetric.hpp  PerformanceMetricsCollector.hpp
include/Render/: render.hpp
include/Simulation/: CPUCalc.hpp  CompareResults.hpp  GPUCalc.hpp
kernels/: nbody.cl  nbody_async.cl  nbody_local.cl  updateKernel.cl
lib/OpenCL/: Device.cpp  cl-patched.hpp
shaders/: fragment.shader  vertex.shader
src/: callbacks.cpp  global_vars.cpp  main.cpp
src/Data/: AbstractData.cpp  WikipediaDataSet.cpp
src/PerformanceMetrics/: PerformanceMetric.cpp  PerformanceMetricsCollector.cpp
src/Render/: render.cpp
src/Simulation/: CPUCalc.cpp  CompareResults.cpp  GPUCalc.cpp
visualization/: .gitignore  README.md  data_management.py  main.py  plot.py  requirements.txt
